          ----------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

27 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-27)
----------------------------------------------------------
- G4DiscreteGammaDeexcitation, G4DiscreteGammaTransition return
    back checks on transition energy to avoid having very low-energy
    gamma in final state
- G4VGammaDeexcitation - removed not needed extra call to
    CanDoTransition() inside DoChain() method
 
27 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-26)
----------------------------------------------------------
- G4DiscreteGammaDeexcitation, G4DiscreteGammaTransition fixed
    internal conversion for the case when transition energy is 
    nearly electron bound energy

25 Nov 2014 Makoto Asai (hadr-deex-V10-00-25)
----------------------------------------------------------
- G4NuclearLevelManager - remove unnecessary data members to reduce
  the memory consumption.

21 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-24)
----------------------------------------------------------
- G4ContinuumGammaTransition, G4ContinuumGammaDeexcitation,
  G4DiscreteGammaDeexcitation, G4DiscreteGammaTransition,
  G4VGammaDeexcitation - cleanup selection of continues or discrete 
    transition
- G4FermiFragmentPool further cleanup values of excitations
- G4ExcitationHandler - added Description for documentation
- GEN probabilities - verified and level energies using gamma
    level data
- G4PhotonEvaporation - improved computation of probability

20 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-23)
----------------------------------------------------------
- G4NuclearLevelStore Makoto Asai redesign the class to enshure that